# rsokf

./: CLAUDE.md  PLAN.md  README.md  log.md  pyproject.toml
.github/workflows/: python-ci.yml
docs/: index.rst
rsokf/: __init__.py  config.py  index.py  ollama_client.py  parser.py  rsokf_console.py
rsokf/pkcli/: query.py
tests/: import_test.py  index_test.py  parser_test.py
tests/index_data/tables/: gadget.md
tests/parser_data/: index.md  log.md
tests/parser_data/tables/: orders.md
tests/pkcli/: query_test.py
tests/pkcli/query_data/tables/: widget.md
